<resources>

    <string name="app_name">Lollipop Animations</string>

    <string name="frame_animations">Frame Animations</string>
    <string name="reveal_animations">Reveal Animations</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="ripple_effects">Ripple Effects</string>
    <string name="ripple_effects_bordered">Ripple Effects Bordered</string>
    <string name="ripple_effects_borderless">Ripple Effects Borderless</string>
    <string name="linear_motion_effects">Linear-Motion Effects</string>
    <string name="curved_motion_effects">Curved-Motion Effects</string>
    <string name="shared_element_transitions">Shared-Element Transitions</string>
    <string name="shared_element_transitions_large">Shared-Element Transitions - Large</string>
    <string name="shared_element_transitions_small">Shared-Element Transitions - Small</string>
    <string name="shared_element_transition">shared_element_transition</string>
    <string name="start">Start</string>
    <string name="enter_transitions">Enter Transitions</string>
    <string name="exit_transitions">Exit Transitions</string>

</resources>
